--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                You can reach me through rosiejane.sumanting91@gmail.com
+                You can email me through rosiejane.sumanting91@gmail.com
             </p>
         </section>
 
